@@ -6,7 +6,7 @@ Forwarded: not-needed
 
 --- a/requirements.txt
 +++ b/requirements.txt
-@@ -18,7 +18,6 @@ keystonemiddleware!=2.4.0,>=2.0.0
+@@ -18,7 +18,6 @@
  netaddr!=0.7.16,>=0.7.12
  python-neutronclient>=2.6.0
  retrying!=1.3.0,>=1.2.3 # Apache-2.0
